--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,18 @@
     background-color: aqua;
     height: 100px;
 }
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+  }
 
+  .searchBox input{
+    float:left;
+    margin-top: 20px;
+    padding: 10px;
+
+    border-radius: 20px;
+  }
 .divCart{
     position: relative;
     float: right;
